tests/sources/invalid/classes/constructor_call_arg_errors.fire
// Constructor-call argument-count and argument-type mismatches, for both
// the bare `ClassName(...)` call form and the `new ClassName(...)` form,
// plus `new` on a class with no user-defined constructor.
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }
}

class Plain {
    v: int32;
}

fn bareCallWrongCount() -> int32 {
    f: Foo = Foo(1, 2);  //~ ERROR FS-SEM-0010 @14
    return 0;
}

fn bareCallWrongType() -> int32 {
    f: Foo = Foo(true);  //~ ERROR FS-SEM-0010 @18
    return 0;
}

fn main() -> int32 {
    f2: Foo = new Foo(1, 2);  //~ ERROR FS-SEM-0010 @19
    f3: Foo = new Foo(true);  //~ ERROR FS-SEM-0010 @23
    p: Plain = new Plain(1);  //~ ERROR FS-SEM-0010 @20
    return 0;
}
